python-pygit2 (0.24.1-1) UNRELEASED; urgency=medium

  * New upstream release
  * d/{control,copyright}: Use my @debian.org email address
  * Changed Vcs-Browser URL to cgit
  * Removed reproducible_build.patch (Applied upstream)

 -- Ondřej Nový <onovy@debian.org>  Mon, 20 Jun 2016 20:08:33 +0200

python-pygit2 (0.24.0-3) unstable; urgency=medium

  * d/rules: Changed UPSTREAM_GIT protocol to https
  * Added reproducible_build.patch to make build reproducible

 -- Ondřej Nový <novy@ondrej.org>  Tue, 07 Jun 2016 22:38:46 +0200

python-pygit2 (0.24.0-2) unstable; urgency=medium

  * Run unit tests with UTC timezone, which workarounds upstream bug

 -- Ondřej Nový <novy@ondrej.org>  Thu, 21 Apr 2016 22:19:45 +0200

python-pygit2 (0.24.0-1) unstable; urgency=medium

  * Added myself as uploader
  * d/copyright: Added myself for Debian part
  * New upstream release (Closes: #820949)
  * Added python{3,}-six build dependency
  * Bumbed libgit2 dependency version
  * Added simple Debian tests
  * Standards-Version is 3.9.8 now (no change)

 -- Ondřej Nový <novy@ondrej.org>  Wed, 20 Apr 2016 14:29:33 +0200

python-pygit2 (0.23.3-1) unstable; urgency=medium

  * New upstream release:
    - Removed network access doing tests (Closes: #809246).
    - Rebuilt with newer CFFI (Closes: #807435).
  * VCS URLs using HTTPS.
  * Fixed debian/copyright ordering and years.

 -- Thomas Goirand <zigo@debian.org>  Sat, 06 Feb 2016 09:53:19 +0000

python-pygit2 (0.23.0-2) unstable; urgency=medium

  * Rebuild to fix permission error in Py3 (Closes: #807435).

 -- Thomas Goirand <zigo@debian.org>  Mon, 28 Dec 2015 09:37:04 +0000

python-pygit2 (0.23.0-1) unstable; urgency=medium

  * New upstream release (Closes: #797185):
    - Fixes can't import in Python3 (Closes: #796657).
  * Refreshed and rebased patches.

 -- Thomas Goirand <zigo@debian.org>  Tue, 08 Sep 2015 08:30:14 +0000

python-pygit2 (0.22.0-3) unstable; urgency=medium
